--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,8 @@
 <header>
-  <h2>{{ title() }}</h2>
+  <nav>
+    <ul>
+      <li routerLink="/">{{ title() }}</li>
+      <li routerLink="/todos">Todos</li>
+    </ul>
+  </nav>
 </header>
