--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,4 @@
 <p>home works!</p>
+<app-greeting [message]="homeMessage()" />
+<input type="text" (keyup)="handleChange($event)" />
+<app-counter />
